--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "mokuyu/ank-phpexcel",
+    "name": "ank/phpexcel",
     "license": "MIT",
     "minimum-stability": "dev",
     "authors": [
